--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
-SESSION_KEY="yourPasswordHere"
-MONGODB_URL="mongodb+srv://..."
+SESSION_KEY="123"
+MONGODB_URL="mongodb+srv://Bala7a19871:Ibntaymya1.@cluster0.5mtsc.mongodb.net/?retryWrites=true&w=majority"
 BOT_TOKEN="124567890:ABCDEFghIJKLmNOpQRSTUVWXYZ"
-OWNER_ID=112233445
+OWNER_ID=6234365091
 PM_REPLY="true"
-SESSION_URL=""
+SESSION_URL="https://eu-frankfurt.apranet.eu.org/files/session.secure"
